Editor: fix small gap between masterbar and content.
This was caused by the recent layout update, and the editor
is still using the old value.

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -14,7 +14,7 @@
 	align-items: center;
 	justify-content: center;
 	// remove normal #content padding
-	margin-top: -28px;
+	margin-top: -32px;
 
 	display: flex;
 	flex-direction: column;
